# qt6_upload_file

./: CMakeLists.txt  common.cpp  common.h  createprojectdialog.cpp  createprojectdialog.h  createprojectdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  videouploaddialog.cpp  videouploaddialog.h  videouploaddialog.ui
lib/quazip/lib/cmake/QuaZip-Qt6-1.4/: QuaZip-Qt6Config.cmake  QuaZip-Qt6_SharedTargets-release.cmake  QuaZip-Qt6_SharedTargets.cmake
lib/quazip/lib/pkgconfig/: quazip1-qt6.pc
